# ep2-crypto

./: .dockerignore  .env.example  .gitignore  BACKTESTING_PLAN.md  CLAUDE.md  DECISIONS.md  PLAN.md  PROGRESS.md  REQUIREMENTS.md  RESEARCH_SYNTHESIS.md  SESSION_PROTOCOL.md  SPRINTS.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docker/: .env.example  Dockerfile  docker-compose.yml  prometheus.yml
research/: INDEX.md  RR-afml-lopez-de-prado-techniques.md  RR-altdata-unconventional-sources.md  RR-api-ccxt-exchange-integration.md  RR-api-onchain-mempool-sources.md  RR-architecture-institutional-quant-systems.md  RR-attribution-pnl-decomposition.md  RR-backtest-framework-design.md  RR-backtest-pitfalls-best-practices.md  RR-backtest-production-parity.md  RR-benchmarks-null-hypothesis-strategies.md  RR-cascade-liquidation-detection-system.md  RR-cascade-prediction-mechanics.md  RR-confidence-calibration-signal-gating.md  RR-costs-modeling-guide.md  RR-costs-transaction-cost-modeling.md  RR-crossmarket-data-sources-api.md  RR-crossmarket-lead-lag-correlations.md  RR-decay-edge-disappearance-detection.md  RR-execution-trade-optimization.md  RR-features-crypto-feature-engineering.md  RR-funding-rate-risk-analysis.md  RR-gru-tcn-training-architecture.md  RR-hedge-fund-infrastructure-20-agents.md  RR-lightgbm-crypto-tuning.md  RR-mega-research-20-agents-consolidated.md  RR-metalabeling-deep-research.md  RR-metalabeling-implementation-guide.md  RR-metrics-risk-adjusted-performance.md  RR-microstructure-order-book-analysis.md  RR-models-architecture-comparison.md  RR-models-btc-prediction-repos-survey.md  RR-models-ml-stack-xgboost-catboost.md  RR-montecarlo-bootstrap-validation.md  RR-montecarlo-validation-methods.md  RR-multitf-multi-timeframe-analysis.md  RR-normalization-stationarity-preprocessing.md  RR-ofi-microprice-deep-research.md  RR-ofi-microprice-implementation.md  RR-optuna-advanced-hyperparameter-optimization.md  (+41 more)
scripts/: backtest.py  collect_history.py  collect_polymarket_history.py  deploy.sh  download_hf_polymarket.py  live.py  migrate_to_timescale.py  monitor_training.py  risk_engine_demo.py  run_benchmarks.py  setup_server.sh  train.py
src/ep2_crypto/: __init__.py  config.py  logging.py
src/ep2_crypto/db/: schema.py  (+3 more)
tests/: test_config.py  test_logging.py
tests/test_api/: test_live.py  test_server.py
tests/test_backtest/: test_ablation.py  test_benchmarks_compat.py  test_engine.py  test_integration.py  test_metrics.py  test_performance_report.py  test_polymarket_backtest.py  test_simulator.py  test_stress_tests.py  test_validation.py  test_walk_forward.py
tests/test_benchmarks/: test_engine.py  test_metrics.py  test_statistics.py  test_strategies.py
tests/test_confidence/: test_confidence_integration.py  test_conformal.py  test_conformal_advanced.py  test_gating.py  test_meta_labeling.py  test_position_sizing.py
tests/test_db/: test_repository.py  test_schema.py
tests/test_events/: test_cascade.py  test_cascade_enhanced.py  test_events_integration.py  test_macro.py
tests/test_execution/: test_integration.py  test_live_exchange.py  test_paper_exchange.py  test_paper_integration.py  test_paper_runner.py  test_polymarket.py  test_quality_tracker.py  test_venue.py
(+155 files in other folders)
