[project]
name = "ep2-crypto"
version = "0.1.0"
description = "5-Minute BTC Prediction Engine"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.14",
    "structlog>=24.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.5",
    "catboost>=1.2",
    "torch>=2.5",
    "hmmlearn>=0.3",
    "optuna>=4.0",
    "scikit-learn>=1.5",
    "shap>=0.46",
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "numba>=0.60",
    "arch>=7.1",
]
ingest = [
    "ccxt>=4.4",
    "websockets>=13.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "yfinance>=0.2",
]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "prometheus-client>=0.21",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "pandas-stubs>=2.2",
    "types-pyyaml>=6.0",
]
all = [
    "ep2-crypto[ml,ingest,api]",
]

[project.scripts]
ep2-collect = "ep2_crypto.cli:collect"
ep2-train = "ep2_crypto.cli:train"
ep2-backtest = "ep2_crypto.cli:backtest"
ep2-serve = "ep2_crypto.cli:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ep2_crypto"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (no print statements)
    "ANN",  # flake8-annotations
    "ASYNC",# flake8-async
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "ANN401",  # Any type needed for ccxt exchange class injection
    "S101",    # assert used (ok in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "RUF006"]
"scripts/**" = ["T20"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "catboost.*",
    "hmmlearn.*",
    "optuna.*",
    "shap.*",
    "numba.*",
    "arch.*",
    "ccxt.*",
    "yfinance.*",
    "onnx.*",
    "onnxruntime.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "golden: marks golden dataset validation tests",
]

[tool.coverage.run]
source = ["ep2_crypto"]
omit = ["*/benchmarks/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.7",
    "mypy>=1.19.1",
]
